<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>tw.com.softleader.example</groupId>
  <artifactId>demo-liquibase-3</artifactId>
  <version>1.0.0</version>
  <name>demo-liquibase-3</name>
  <description>Demo project</description>
  <developers>
    <developer>
      <organization>SoftLeader</organization>
      <organizationUrl>https://www.softleader.com.tw</organizationUrl>
    </developer>
  </developers>
  <properties>
    <container-base-image>harbor.softleader.com.tw/library/eclipse-temurin-alpine:17-jre-taipei</container-base-image>
    <container-image-project>CHANGEIT</container-image-project>
    <container-image-repository>harbor.softleader.com.tw</container-image-repository>
    <git-commit-id-plugin.version>6.0.0</git-commit-id-plugin.version>
    <java.version>17</java.version>
    <jib-jvm-flags-extension-maven.version>1.0.3</jib-jvm-flags-extension-maven.version>
    <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
    <kapok.version>3.2.11</kapok.version>
    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
    <lombok.version>1.18.30</lombok.version>
    <mapstruct.version>1.5.5.Final</mapstruct.version>
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
    <maven.compiler.release>${java.version}</maven.compiler.release>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
    <skip.formatting>false</skip.formatting>
    <spotless-maven-plugin.version>2.41.1</spotless-maven-plugin.version>
    <spring-boot.version>3.2.3</spring-boot.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>tw.com.softleader.kapok</groupId>
        <artifactId>kapok-bom</artifactId>
        <version>${kapok.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>tw.com.softleader.kapok</groupId>
      <artifactId>kapok-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>tw.com.softleader.kapok</groupId>
      <artifactId>kapok-liquibase</artifactId>
    </dependency>
    <dependency>
      <groupId>tw.com.softleader.kapok</groupId>
      <artifactId>kapok-web</artifactId>
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>tw.com.softleader.kapok</groupId>
      <artifactId>kapok-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <repositories>
    <repository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>softleader-public</id>
      <name>SoftLeader Public</name>
      <url>https://repo.softleader.com.tw/repository/maven-public/</url>
    </repository>
  </repositories>

  <build>
    <resources>
      <resource>
        <filtering>true</filtering>
        <directory>${basedir}/src/main/resources</directory>
        <includes>
          <include>**/application*.*</include>
        </includes>
      </resource>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <excludes>
          <exclude>**/application*.*</exclude>
        </excludes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <filtering>true</filtering>
        <directory>${basedir}/src/test/resources</directory>
        <includes>
          <include>**/application*.*</include>
        </includes>
      </testResource>
      <testResource>
        <directory>${basedir}/src/test/resources</directory>
        <excludes>
          <exclude>**/application*.*</exclude>
        </excludes>
      </testResource>
    </testResources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <executable>${java.version}</executable>
          <encoding>${project.build.sourceEncoding}</encoding>
          <parameters>true</parameters>
          <annotationProcessorPaths>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>${mapstruct.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <version>${lombok-mapstruct-binding.version}</version>
            </path>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
              <version>${spring-boot.version}</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <compilerArg>-Amapstruct.defaultComponentModel=spring</compilerArg>
            <compilerArg>-Amapstruct.suppressGeneratorTimestamp=true</compilerArg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven-resources-plugin.version}</version>
        <configuration>
          <propertiesEncoding>${project.build.sourceEncoding}</propertiesEncoding>
          <delimiters>
            <delimiter>@</delimiter>
          </delimiters>
          <useDefaultDelimiters>false</useDefaultDelimiters>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>
        <executions>
          <execution>
            <id>repackage</id>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
          <execution>
            <id>build-info</id>
            <goals>
              <goal>build-info</goal>
            </goals>
            <configuration>
              <additionalProperties>
                <encoding.source>${project.build.sourceEncoding}</encoding.source>
                <encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
                <java.source>${maven.compiler.source}</java.source>
                <java.target>${maven.compiler.target}</java.target>
              </additionalProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <classesDirectory>${project.build.outputDirectory}</classesDirectory>
        </configuration>
        <executions>
          <execution>
            <id>integration-test</id>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <version>${git-commit-id-plugin.version}</version>
        <configuration>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <generateGitPropertiesFilename>${project.build.outputDirectory}/META-INF/git-info.properties</generateGitPropertiesFilename>
          <failOnNoGitDirectory>false</failOnNoGitDirectory>
          <validationProperties>
            <validationProperty>
              <injectAllReactorProjects>true</injectAllReactorProjects>
            </validationProperty>
          </validationProperties>
        </configuration>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>${jib-maven-plugin.version}</version>
        <configuration>
          <from>
            <image>${container-base-image}</image>
          </from>
          <to>
            <image>${container-image-repository}/${container-image-project}/${project.artifactId}</image>
            <tags>
              <tag>${project.version}</tag>
            </tags>
          </to>
          <container>
            <entrypoint>sh,/entrypoint.sh</entrypoint>
            <jvmFlags>
              <jvmFlag>-server</jvmFlag>
              <jvmFlag>-XX:+UseZGC</jvmFlag>
              <jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>
              <jvmFlag>-Djava.net.preferIPv4Stack=true</jvmFlag>
              <jvmFlag>-XshowSettings:vm</jvmFlag>
            </jvmFlags>
            <ports>
              <port>8080</port>
              <port>5005</port>
            </ports>
            <labels>
              <tw.com.softleader.kapok.version>${kapok.version}</tw.com.softleader.kapok.version>
              <tw.com.softleader.image.group>${project.groupId}</tw.com.softleader.image.group>
              <tw.com.softleader.image.artifact>${project.artifactId}</tw.com.softleader.image.artifact>
              <tw.com.softleader.image.version>${project.version}/${git.commit.id}</tw.com.softleader.image.version>
            </labels>
            <format>OCI</format>
            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
          </container>
          <pluginExtensions>
            <pluginExtension>
              <implementation>tw.com.softleader.cloud.tools.jib.maven.JvmFlagsExtension</implementation>
            </pluginExtension>
          </pluginExtensions>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>tw.com.softleader.cloud.tools</groupId>
            <artifactId>jib-jvm-flags-extension-maven</artifactId>
            <version>${jib-jvm-flags-extension-maven.version}</version>
          </dependency>
        </dependencies>
      </plugin>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless-maven-plugin.version}</version>
        <configuration>
          <applySkip>${skip.formatting}</applySkip>
          <java>
            <googleJavaFormat></googleJavaFormat>
          </java>
          <pom>
            <sortPom></sortPom>
          </pom>
        </configuration>
        <executions>
          <execution>
            <id>apply</id>
            <goals>
              <goal>apply</goal>
            </goals>
            <phase>validate</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
